# web-intel-briefing

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: cli.py  models.py  obs.py  pipeline.py  prompts.py  storage.py
agent/llm/: client.py
agent/tools/: brief.py  fetch.py  search.py  summarize.py
docker/: docker-compose.yml
docker/searxng/: settings.yml
docs/: FUTURE-WORK.md
docs/superpowers/plans/: 2026-05-17-market-intel-agent.md
scripts/: probe_models.py
tests/: test_brief.py  test_fetch.py  test_llm_client.py  test_pipeline.py  test_prompts.py  test_search.py  test_storage.py  test_summarize.py
