[project]
name = "market-intel-agent"
version = "0.1.0"
description = "CLI competitive & market intelligence agent"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "trafilatura>=1.12",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "tenacity>=9.0",
  "pydantic>=2.7",
  "openai>=1.40",
  "python-dotenv>=1.0",
  "python-dateutil>=2.9",
  "dateparser>=1.2",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
